# My5

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  pyproject.toml
api/: .env.example  config.py  main.py  models.py  requirements.txt
design/stitch_nba_lineup_sandbox_simulator/my5_final_two_way_result/: code.html
design/stitch_nba_lineup_sandbox_simulator/my5_live_two_way_engine/: code.html
design/stitch_nba_lineup_sandbox_simulator/my5_sandbox_two_way_simulation/: code.html
design/stitch_nba_lineup_sandbox_simulator/synthetic_court_logic_2.0/: DESIGN.md
frontend/pages/: _document.tsx  index.tsx
frontend/src/components/: AboutScreen.tsx  HistoryScreen.tsx  Icons.tsx  SideNav.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/lib/: api.ts  config.ts  types.ts  websocket.ts
frontend/styles/: globals.css
infra/: main.tf  variables.tf
scripts/: batch_reconstruct_diagnostic.py  build_lambdas.sh  diagnose_variance.py  e2e_queue.py  e2e_ws.py  e2e_ws_aws.py  load_dynamo.py  load_test.py  poll_job.py  run_aggregation.py  spike_pbp_schema.py  validate_simulator.py
src/my5/: __init__.py  aggregate.py  cache.py  config.py  dynamo_writer.py  job_store.py  job_worker.py  loader.py  logging_utils.py  queue_client.py  reconstruct.py  simulator.py  submit_job.py
src/my5/aws/: __init__.py  dlq_handler.py  worker_handler.py
src/my5/ws/: __init__.py  bus.py  emit.py  notifying_store.py  (+3 more)
tests/: test_aggregate.py  test_cache.py  test_dynamo_writer.py  test_progress.py  test_queue.py  test_reconstruct.py  test_simulator.py  test_ws.py  test_ws_aws.py
(+14 files in other folders)
