[project]
name = "my5"
version = "0.1.0"
description = "Basketball lineup simulation sandbox"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.30.0",
    "sportsdataverse>=0.0.59",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
