[project]
name = "my5"
version = "0.1.0"
description = "Basketball lineup simulation sandbox"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.30",
    "fastapi>=0.138.0",
    "numpy>=1.26.0",
    "polars>=1.30.0",
    "sportsdataverse>=0.0.59",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
